# WindowKit

./: .gitignore  CMakeLists.txt  README.md  install-release.sh
cmake/: WindowKitConfig.cmake.in
include/: window.hpp
inline/: window.inl
interface/: WindowKit.hpp
source/: window.cpp
source/linux/: adwaita.cpp  gtk4.cpp
source/macOS/: cocoa.mm
